[gd_scene load_steps=3 format=2]

[ext_resource path="res://test-menu.gd" type="Script" id=1]
[ext_resource path="res://ChangeSceneButton.gd" type="Script" id=2]

[node name="Panel" type="Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 327.0
margin_bottom = 14.0
text = "This is a label."
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 327.0
margin_bottom = 38.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 327.0
margin_bottom = 66.0
text = "Click and type here to choose a scene to open."

[node name="ChangeSceneButton" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 327.0
margin_bottom = 90.0
text = "Change scene"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="VBoxContainer/LineEdit" to="VBoxContainer/ChangeSceneButton" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/LineEdit" to="VBoxContainer/ChangeSceneButton" method="_on_LineEdit_focus_exited"]
[connection signal="text_change_rejected" from="VBoxContainer/LineEdit" to="VBoxContainer/ChangeSceneButton" method="_on_LineEdit_text_change_rejected"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="VBoxContainer/ChangeSceneButton" method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/LineEdit" to="VBoxContainer/ChangeSceneButton" method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/ChangeSceneButton" to="." method="_on_ChangeSceneButton_pressed"]
